--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sad Pixel Official Website"
+      content="Sad Pixels Official Website"
+      image="%PUBLIC_URL%/website.png"
     />
+    <meta name="twitter:card" content="Sad Pixels" />
+    <meta name="twitter:site" content="@sadpixels" />
+    <meta name="twitter:title" content="Sad Pixels" />
+    <meta name="twitter:description" content="Technology made us dead inside" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/twitter.png" />
+    <meta property="og:title" content="Sad Pixels" />
+    <meta property="og:description" content="Technology made us dead inside" />
+    <meta property="og:image" content="%PUBLIC_URL%/facebook.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sad Pixel</title>
+    <title>Sad Pixels</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
